--- a/RMS/RMS/Forms/frmLogin.resx
+++ b/RMS/RMS/Forms/frmLogin.resx
@@ -137,26 +137,6 @@
         aXNpb24AAAAACAgICAIAAAAAAAAA//////////8L
 </value>
   </data>
-  <data name="cmbUserType.Data" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAE5TeXN0ZW0uRGF0YSwgVmVyc2lvbj00LjAuMC4wLCBDdWx0dXJl
-        PW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAABVTeXN0ZW0uRGF0YS5E
-        YXRhVGFibGUDAAAAGURhdGFUYWJsZS5SZW1vdGluZ1ZlcnNpb24JWG1sU2NoZW1hC1htbERpZmZHcmFt
-        AwEBDlN5c3RlbS5WZXJzaW9uAgAAAAkDAAAABgQAAAD1Azw/eG1sIHZlcnNpb249IjEuMCIgZW5jb2Rp
-        bmc9InV0Zi0xNiI/Pg0KPHhzOnNjaGVtYSB4bWxucz0iIiB4bWxuczp4cz0iaHR0cDovL3d3dy53My5v
-        cmcvMjAwMS9YTUxTY2hlbWEiIHhtbG5zOm1zZGF0YT0idXJuOnNjaGVtYXMtbWljcm9zb2Z0LWNvbTp4
-        bWwtbXNkYXRhIj4NCiAgPHhzOmVsZW1lbnQgbmFtZT0iVGFibGUxIj4NCiAgICA8eHM6Y29tcGxleFR5
-        cGU+DQogICAgPC94czpjb21wbGV4VHlwZT4NCiAgPC94czplbGVtZW50Pg0KICA8eHM6ZWxlbWVudCBu
-        YW1lPSJ0bXBEYXRhU2V0IiBtc2RhdGE6SXNEYXRhU2V0PSJ0cnVlIiBtc2RhdGE6TWFpbkRhdGFUYWJs
-        ZT0iVGFibGUxIiBtc2RhdGE6VXNlQ3VycmVudExvY2FsZT0idHJ1ZSI+DQogICAgPHhzOmNvbXBsZXhU
-        eXBlPg0KICAgICAgPHhzOmNob2ljZSBtaW5PY2N1cnM9IjAiIG1heE9jY3Vycz0idW5ib3VuZGVkIiAv
-        Pg0KICAgIDwveHM6Y29tcGxleFR5cGU+DQogIDwveHM6ZWxlbWVudD4NCjwveHM6c2NoZW1hPgYFAAAA
-        gAE8ZGlmZmdyOmRpZmZncmFtIHhtbG5zOm1zZGF0YT0idXJuOnNjaGVtYXMtbWljcm9zb2Z0LWNvbTp4
-        bWwtbXNkYXRhIiB4bWxuczpkaWZmZ3I9InVybjpzY2hlbWFzLW1pY3Jvc29mdC1jb206eG1sLWRpZmZn
-        cmFtLXYxIiAvPgQDAAAADlN5c3RlbS5WZXJzaW9uBAAAAAZfTWFqb3IGX01pbm9yBl9CdWlsZAlfUmV2
-        aXNpb24AAAAACAgICAIAAAAAAAAA//////////8L
-</value>
-  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -205,61 +185,65 @@
         XTesb3QPLh88M+QwdP6m681Lt7xuXbu94vbgcOjwnZHokdE77DtTd1PuvriXeW/h/sYH6AdFD6UeVjxS
         fNTws+7PbaOWo6fHXMf6Hwc/vj/OGn/2S8Yv7ycKnpCfVEyqTDZPmU2dmnafvvF05dOJZ+nPFmYKf5X+
         tfa5zvMffnP8rX82YnbiBf/Fp99LXsq/PPRq2aueuYC5R69TXy/MF72Rf3P4LeNt37vwd5MLWe+x7ys/
-        6H7o/ujz8cGn1E+f/gUDmPP8usTo0wAAAAlwSFlzAAALDAAACwwBP0AiyAAADIdJREFUeF7tnHmQXVUR
-        hy8QBQSUQGZ7b+7sb7IAMUSjoRBRQTAEkQiKJbJIQDAIYQluGBe0SjQx7uVShVFEULDcorhHBaKUUTQa
-        iAYIkgQxGhBUooA6/r7J3ElPp+/bJlMZq94fX73JuX363Hvu6XO6+5ybZGBgoEGDBuOUsLBBgwbjg7DQ
-        0522dfd2Fhd0FJoXdRZbThF7iKQODhbTxX6mrBaeIV4nuI8zRDk9+4tZ4hXi9eIycWkOXFsoXitOFIeI
-        p4pI71MEOrmHi0S/iORqZZI4T1whTm8utuxzYkdbcl8pTdaX0hniUnHZ0G+1IA8zRfJAf5os7Cwkkwph
-        +7XQLo4RvIOLRaW+vVC8WrxQUDfSWQ0t4khB/zMOovY854tXiqNEm4j0VsOegnd9gpgveP9vFW8rw5sF
-        zz5PTBUj7CayNU9Y6JGyW8WAYYEYbqhKGHwPCurfLV4kIrly3CjsfSwWXubZ4jNio7CytfBv8XuxVHQK
-        q5+XYmX/Ks4SVqZWXiDuEcN6C8WWZUe0tyZrS+ke95bS1TKwgVGw5p5SOkG/yYvT1qR1R7vHi5vFLeL5
-        Q2V5TBBnipXib8L2QS1Ql/aYDPcSUVsW2qV/fygeFpHOauFd/UicI5hoo/Y8qXiXWCMeF5HeanhS3CGY
-        1J8mQlvzhIUeKfu6sI39QRwo/MPkcZhg0I9Gx3PFf4TVweyUXafD3y/oCCszWraIOSJr5y0ikvu0YNXO
-        5KqFFfMJMUJfW7FlCQZ6ZyndU8a1zhlcrdy/pT/dd2l3MVs9m8QnbHviTrG38PcHU8QqYeV3Bd8RE0XU
-        JrBiYlBR3dHyE1FpRWX13Sqi+qPhl2JqZGuesNAjZbgH3sAuEf6B8rhJ2LoZDM5IPuKbwtbFwHF5ucZM
-        fL2w1z0YLoaQhzd+CzO3vPzBthjEHxaRHB1/uLD3nQcu7ZdEpGd5U6Fl/4s625JNcktlYDeIJ+rhbvFg
-        f3rTit72ZJoMXivzqdK/wbUH9OfgzO6YLDYJL59Bv0X9mVFpwrxO+DaBlfNbIqoD/xWV3inXy73XH4i8
-        UAbXPaqTUal9by+etZGtecJCj5SB7yxeGjGlfagIYoa8l8TqVE1cgPvl6+IqZNdxWfz1P4olYq5gBSd+
-        6BMlR1Y2TdDO5eIXwuu7Wth7Ig76k/ByfxfMvFbWM1usE74u7h+xVSIDTZZ1FwbjRhna3qJPlKpBK25p
-        o1Dd0oZS2ntNTzHpLbYUtSp/zrRl+a04Wvj7xEhYabw8Liox+/MEsZXtRwtl9Pt0cZJgYvuLsLoY6OQK
-        fNv0kZWD74rTxXMEeYK8d2rb5r0i/xpBfa+TuNi3jcewTVi5R8XnBaEaz32oKDemmNgIt2h3ufDu+aOR
-        rXnCQo+UwRHCG9o7hX0wD4G1j189HxRRXcv3ha2zXhwguEbg7QcRcRXukddTLQxMZnarkza8XIf4qrBy
-        GTeIZuHrvEn8S3j5n4lnikE5DHTJDgOtiIwykVEOyt+l3xtllBd2FpKjtq+a84s74n8Lg5B3mJdsY4BZ
-        eVYFEi+RbLUwqP2KHOkk3rUy5ASqjRvz4L3eJazeNwgvRwLIyuD+Y3herhaIZVmxM50PRbbmCQs9Upbh
-        XVVmw4KwMpaXCyuPgf/clf1DlHt4soVWHs4W2XXivvuEvX6csDrqgcSE1ckqwwuOZHHV/ymsPJAMy5Iv
-        xH1fEV4GPiL2EcM6qzFQjHKTQGatfq+XUV4gt3iWjLJFOhRvTpFx3twRt0lM+Swx3GYA2U9bByOpN4Nv
-        +Zqwet8tvAyZUivzU+Fl6sFP5mSZvcxSYWU+LrxMPZAzyXSOiYGSqPGr6AeElckgnlkrrCyrKS6tn0Gv
-        EZEOYkvfoT6Z8XRB/GRlMGqrpx78AOFZ8uIVwJX3szOQ+VsmMHB/7SHxKrGTvjwDvVdkRrlGv9fKKM+T
-        Uc6UUTarHkkgrZZ4LqxKuGW+TVxwVvFqViNvoOUmqVrwScf3CC/jw5bbhZepB+/RRav3UmFlmEC9TD2w
-        3ZfpHBMDBd+5pK5x9bwccZiVA/aQuPZGUwYE1VEcgryVA/berExkoMcKK1MPtRookJH8rLD18rhNEOtE
-        eoZj0C0yRPZCN+sXftWXJsSUZ3W0JTPaW5JmySEro8zqzhB5mU/KiQdHtFUGb6D0wWjdTPh/M1ByEu8Q
-        V40C6tsYeMwMlFUUg7IP8CFhZciueqMhpZ65R8SPuEv2Oi/N6mAVYBBbGfaiRriCYjwZaMZpggSYrZ9B
-        371XlB3oGN7irkJyR6k9WdnbnnxKRnmmjPIwrZQYpDNKwGO5UjwmfJtsFZDUqWbf0dIw0LFjzAwU/JYG
-        ceTkjkJzAvr77eYaMChnCquDONLKQLbCwsuGyoYpdacn9/d2Jv09HUmXBqrKYDwaKBnLKMMLhAjvExV1
-        dYuS6BKZUbYPXXNw6OPXImqPuDfbIqqVhoGOHY9EtuYJCz1S5iG5MOJUhQxzuQwoEan+xu21N3Ot8DoY
-        oH5Q8RJYZYlz/FbH7XOOO2avU05+aTLvpLm0k00G48lA8Qw+KWy9PHjWsu5mh0iHfqPrAk+FLHi010fW
-        drQnnBoGuh2y12TegXG/K9gc2ZonLPRIWcSXxfBDpG1N26ZPm9wjrtbf9uFI5efFWn4AAPuWL3Flg+XF
-        5oOStqaJSaF5YmacMFYG6gdIJQPF9f+NsHUA4+Hooc80A0kcJoJIXyU4M/w74XXCF0WUF6iVsTJQn8Ud
-        7wZKqMWRzx6BN1IWTaiV6BPtka15wkKPGo1gj2xELCrDXCXITNqHK7fPSZzps7TEmX5l/bGI6gMGer+w
-        8tGme614F7zc4OQl+41tYOLgvCsyGMz3hJcBNrKrPfbIdk3eKr1ZsJEf1asHYmmrnz6I5GrlG8LqHe8G
-        yq6Dz33sBKFIQbQJwpM8kOsRka15wkJPdDNDVDpexz5pq4jqZjCAOU0S1QeuldvXxB3miJ2t8zGB8Ufy
-        1cDeqnfDmEX9HiBGl7e3yZ6x3yMmSUM2DxfHy7N9VOnAOsf0opWYiZKzwNWc7KoFDvHbdkhA2XPJ9cCp
-        nj8Lq5eDAV5udxoo+9pWBj4qyu4BY5wcDOGQyKq+9uTWHG4Rt4nI1jxhoSe6mSE4+RKdihlE7ugVrZMO
-        TCztrZMiPZz8CXUIUtNRHQtfG/h6bGzz1Q3bN10CYynmwDWMDa+AM8bRfqbfTMf9yzvqx36XlfWwZxod
-        9SOBxBc6fnLhRNKIkMLAJMiWFhMhz4IrxqmVPPyzZ+wrbJvARMVhC9sekwFbSXx2yDE6dOb1LeWA68ck
-        y4a/zzITAvgEIuxOA+X4YnTwhLp8hcMxPz6bs8/ddHChJbmks5Bs7U+TDaW0SXSINIDytsjWPGGhR42X
-        g/hqxIMoPhzoam9df9qp8/abf/YZiWXW4dOTpokHDMaShtlyjf0BCCA4ZzBH7VpYOViBfP0MOhvDKUfk
-        ombgqmaeAAOZgRbJrRbsQ/r7i+Cw/BdEpIctKV5+Jpv3sQEwQRJWcP88J78YQR7Rs5OFJ56NcgVkpPM8
-        HIwrT6cl8hgyOJ/r24TdaaDgPyu00B/0WfZ8/P3wpELL5efLQDf1p3PWl9KtYpt4LIDyjZGtecJCjxov
-        B7NJdHL/nKml7uSQyb3D8O+jj5ydnHD8sclcx7TJvde55BL4vdFyEMBziNvrGC0YvjU6TgVFcrjV0dcg
-        leAsaDQ5cG4Tlxi3qtzksyvJ+86XuNbnFnYFnCDL+8TtXGFlmfwiuVrBs7J6+TgikgO2w6xsWWSgqy+W
-        gW7uT6+SAfpP/jxjus3i4dOc7CsFZnE6fgKZVosMEENMZk4/ZCf6utrZnlkpHhesCgxQ/7F0JYhH2VrA
-        UJnZd+rEKmHCISPLLJp90pbhTwoRT5FMsTK1ghvuE2NsM2VJKb7csdfGCs5O+3vLIExgwPoDJrXyiPi2
-        IFsftZPh98FXiEiuVnxuoVJSjU8tybU8IGy9nZCBrliw3UD5Xywio7Q8GdmaJyz0qPFq4OsRthqIN6Lr
-        g2SG6qG8O21LDp3S1yd6zEGEesG42a45Vze0SPo5ZVMO/nsKVhAGKZ8y5SWZyLZeIEj24B4xcCO5WiEb
-        zadMeXpx9Umm8F9pRPc/Goh7OUJZzRYKW014FCSsOPxNv1W6J1YpXFa2v6zrXg7a4YsWDr3w3N0ikqsV
-        +pX7QS/3FMXeEbwfElxMxjw355mz5+P5F8lAuzHQTaX0oHV96UIZ4WJxZQDlCyNb84SFDRo0GB+EhQ0a
-        NBgfhIUNGjQYDwwk/wP5G5DOxwvtJAAAAABJRU5ErkJggg==
+        6H7o/ujz8cGn1E+f/gUDmPP8usTo0wAAAAlwSFlzAAALDAAACwwBP0AiyAAADM1JREFUeF7tnHuUVVUd
+        x49KqakByjzv3BnmcYeXIlIULjMtTUNMJShbmYCiaZCAgmUqmdpaWRj2XD3WUsxMS1tlUfbGUilXlEmh
+        FJokYGbhq5JSq+n7Ge6RPT/3PufcF8ysdf/4rjv3nL1/e+/f3t+9f499J+rr64vqqOugvgYG5xqok7O+
+        QdXXwCBeA5kmpzPf0tndkZvf3tq4tCPXNFPYQ4jKwEGqM1HYr4y6tDdceLdAP05PkbO/3k8R3ia8R7hA
+        OD8A3i0SzhBOFCYILw/08WVFmfThPKG3zLFY/Y2SnLOFC4XTGnNN+5zY3hJtKuSjjYX8JOF84YLiJ39n
+        AeXBZCF6tDcfLepojUa1ljV3bn/b1MdjinOwMINuF6jMO4U3CNQtZ+1Qp0k4oqh/1kFoPt3n56jc24Uj
+        hZYK2t6zONcn6HOewPxfLFyagIv0jrHPEMYJA3iTxWrJRFAJvkvoczC/jIGy+B4rynhQn28sQ8Ytph/L
+        PDJerWfXCZtNWbf/aX//R3X/IFwtdJg2mBS3/lP6PqeMsbiL9GjVf8iV25prWnF4W3O0vpDf44+F/FoR
+        rK8CrHuokB8GSd+Ub46adxLkeLV5u3Cn8PqUMQzT+9nCauHvFeiWurTHZrhXBr3RLvr9ifBkBe0yZ8zV
+        HcKZAhttlo0ir3KXC+uE5ypo/wXVvVdgU38FbVeToN8yHfuTvo/IOECUcIjAoncXdqkyXqv6/zUy2J1i
+        JaPwjwkoIo2Apbx/XPKmOe18ICD/i3rOqZ1l0t0ynJjPW5ktuablEPT+Qn5PkWtDBeSE2I883pvf9+rO
+        XHx6Nqi9z5k279f3vQP9H6vna6qsV+bg+8LIBJ1xYkKoUuYra9mfSW7aicrpu60G7f9aMsdVk6CYB5Zg
+        i0tYjLcGBsnizLqgv2NkQHBMXuqzE9+UokiICxFCsOR3J5qdW1Z+f1ss4k8G2kLxh2UcEybt1wJyVja0
+        Nu1/XkdLtEVmqQh2s/B8OXhQ9R7rzd+6qrstGi/C62SepTYf9rSLPvt3doMx+r4lQbfoLUmvaRvmjQF9
+        cXJ+N6Hd/+ld2pzyPmlef6z3IVcG0z2J7GntW75YWeurSVAmzSqLScOnTCMYPkNokjid0nYx5GN+2QFi
+        KsRtY7LY93/Ws+XCdIETHF+xRygYxM/GF9tZos9feeRdZcaKb/sXT7l/6Bk7b5Jepur9Bk9dzD98q0gE
+        jVZ0tvb7jSLm3kKPUMgCnbiFzYLqFh4u5Luv7cpF3bmmnE7lLwUW3e/0/ChPnyEJJ43VLSYqPvvrBHwr
+        dBrSLXon7nCSwMb2NyOPhU6swOoLHdl2f6BnpwmvEYgThOY07g/vmVfKv0ugvpWJX2zbxmLYbso+o+9f
+        FnDVGPfBCe2jCzY23C3aXSlY8/yZahP0cDViifYhz+DcweJYW//VKuiaFBnI+5FR1kZ9P6BYD8fbLiL8
+        KsyjtM0j9J6Fyc7u9pU2bPl2PfumZ9Kpd7PQ6Knzfj37t6fOL/Ts0Lg8BF2+k6CQNBEiZSRS9hP6AX3e
+        IlIuUEDoyB2n5rzcTv/fHROLkDkMBe1YYG55TgUCMOXqlXqQxp7IPpn4u27bxASy+o1J8/qAkftez3gI
+        ALltY/5D+krGjS/LiR3LfaLaBKVz1lRlN2xN6PhbzUAh+C/Ns3+mDJ5ooSX1XKdN/L5NpsxxFSqTsc4x
+        MjllIK5vkjDV/+XpJ8GwOPiC3/cNTxnG9ilhH1d2FoJCyi1FUiqYFN0kUp4rs3iKSNmkfipaO1bkvL3d
+        b6rhU74qRU9EPy1Jyo3gu3q7zci90tMPIqVu2z+vwpzSB7uZE8G3c0pw0G37s1Vqm5hJTQlKoMaeoh8P
+        dB5/Zr0ZKKcpJq3dQa8NyMC3tAq1wYxXqgz+k6tQSF3Jbkddu0AYS8hfoTymvN2d6RORvxUCBLcbzRN6
+        9g5fX0MEVUT3RVKu0983iJRni5STRUqlZvqDQDotsVw4lTDLbJuY4JziWU4jS9CkTaoUfdug44c9OrBu
+        yz1VmFP6aC063+ltCcoGWsr4QmVJ99WUoDRslfuUnmHq2U7hh9nFQQ6Jcu8z7wgy+PwQylsZ5D/dtnwE
+        PbYKCi2VoPSJiOT1nj7bMfD9bgFfxzuZsQ+q6Gt/LnSrPsFvevIRPuUc5UgntTVFjSIkZUXKWM4kybwj
+        0Aee4w9mXWyWoGxSWYidJn+oEZSYxGXCFRWA+q4PXBMTF8Vzitq0wCfMpA/Xd3uqEVKPzSP8R3wKd+Ey
+        ae7EcgqwiN0y5KIGmIL6PpgIGvf/VPWLAJiPmOjuI2kLHeItG90a3Vtoi1YrAvsFkXK2SHmITkoIaUhJ
+        u1gslwjPetolVbBIyJJ3dOegTtDapHhYFzUjKBNoUxr4kWN00ygC+vuDZpGwKCcbAs71LKT4hEXGyfZ9
+        oTN/Sm93R9Tb1R6N1kItyhuMBCVi6YvwMjG4CB8Vkszl/rF1CgVhdDGqCynb/Kcflz7uC2wI+L1xiijt
+        ZLPv6wStHUGfrkWQKJ5AggsDblWImCtFoEjI62/MXvf0uMGQEzksULuo8DM4ZQnG2FTHPdOOO2avmae8
+        JZpx0nTaiTeDwURQLIPPB4hiT1PGmmhuKrgT5QU+PfrjGZbKNYIv18etrTmBelmJWifojnVM9JrIO2Dd
+        VwNba0lQJvjr7kLMtzRsnzh+TJdwlf52FyOh/JCvZRcA9chbvtmzyKfnGg+MWhpGRq2NI2Ny0o9aEdQG
+        KdKCRJj+v/X0G/JcJ2zyvCOIg6+blTBuOe4M/z6wGXxVz31xgVLbqRVBbzP9HuxBIlytDqFLwBpJhDbU
+        7hT06H1brQlKjmyALypirhGITLoEZYcPLQz8TBulxc+0J+tPE2RA0EdMm0eVuejdfloTPClAQiTQJrbR
+        AX44912RC2F+GCDUSj0fkbHPpGtCp/RWvSORXyoRQ+Xxpd25RAfVkP3tIUZQsg429vESPeCKKK0V6UJI
+        v3sSAuW6hFoTlA5aX9SaceRJm1MmlQXMbRJfQIVnvEvKa2IOc8XOrf8ZfYf85S4mcqs20sguanOAkC6U
+        2yRnbHPEBGmI5vkuXZM+inOmoX7PUhnfScxGyV3gLDe7StHJ0UavBKDce8mlyIrLcqvnr0YuFwOsrN2Z
+        ZiGvbdfjpz3zP6DPkJOLIVwSWdPTFt0VwJ16frewKwh6qDrtuxXTPziZoxc2jxoRuWhrHuWbVG7+hAhK
+        aDptIVzuqU9im1/dkL4ZXSRLTp8+QCTIhlWwWPDlM20yHfMvdNWPfFdSn8mZ+q76EUDiFzp2c+FG0gCX
+        whkvmyApLTZCxoYpxq2VEEI62NfTZzYqLlu4c8NmcL0wU+AaHe2gv5BeeYdJyCZLwt9GmXEBbAAR3e1O
+        gnJ90XfxhBzqGQLX/NrMuBsOUhBvsW5vbVM6TFcsG4R2Ie8Bz1t2BUFRJP7VAHIpSNSnKOvGU2fN2G/e
+        3NMjF1MOmxg1jDyg35d0MFWmse++Ls45izmNoJwcnEAhkqNsEvRJ8JmosTxM1dgSYCGz0HxtrdXzSRn6
+        y3hGCV8JyCEl5Z6+9gaX2zYbJG4F/WecfEKCEHw6IAqPP+uLFRCRDlk4kIt20nSb9DMt7uf65nd3EpT+
+        XJywntAHOovHzd9P6pLIknNEUP3AYZquZm4TtgvPesDzzbuKoOwmvpv7Z44rdEYTxnS/CL4fdcTU6ITj
+        j42mG4wf032jCS6xCG1uNImoOPBc4g6RtNznEN8lHbeCfLIwq32/BknbXLgL6tscuLeJSYxZnbT5lDsu
+        Xz0sDl9/8WttbKEa7XKDLPQTt7OMntn80nSZ5T2Wldv3JQlySYdlHqcIunahCKoLJVdk+HlgTdMsVhEL
+        NRBMLQbDLo7ih8V50fhTBIxExGjyxAkvQc/oNtIzq4XnBE4FFijmWhalx2XwR+cUiepL2GdVNhsOEVl2
+        0eGmD5h3rhz8KYIppfTTlsUMv8/IJc0U39rhlztZ+15JOe5Oh8aBm8CCtRdMSm3vacn4nkC0PklnJ5sx
+        r6pQx3FbNraQFlTjp5bEWh5NmwMRdNX8HQTlv1ik/cD+hV11gsYD59cjpBoSk+KQFaJa8Fz/WiU6eGxP
+        j9DlXEQod+FDbtI1Z6lDSyWfWzZJuEjvOUFYpBOEUJBphN6dK1wmEL1l4ZbbR7ce0Wh+yhSSi6lPMOXS
+        lHGkjdP3Hr+XK5RZrvGRv8aiIGC1QEBvaX3ilMJk5Qpm0o8rXH3QzmyBSy+Mu7NKema+6A9y6ZPP9/bN
+        J/NDgIvNmHFznznWJeNfKoJ2QlD9gOHADT35RSLpMuESD3i+qGoEzSKoXmZw/le4+rwM7XnJFOqtT/LQ
+        nuT6/A3d+asTdBD/y8U6sYYusao1d/8H+RuQzpfbjLwAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="errL.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
